--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/nivhojberg/the-company-in-server/issues"
   },
-  "homepage": "https://github.com/nivhojberg/the-company-in-server#readme"
+  "homepage": "https://github.com/nivhojberg/the-company-in-server#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
